After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778663 - docs: Various small introspection annotation fixes
docs: Various small introspection annotation fixes
Status: RESOLVED FIXED
Product: pango
Classification: Platform
Component: language-bindings
unspecified
Other All
: Normal normal
: ---
Assigned To: pango-maint
pango-maint
Depends on:
Blocks:
 
 
Reported: 2017-02-15 11:07 UTC by Philip Withnall
Modified: 2017-04-08 05:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
docs: Add a few missing (transfer) annotations (2.12 KB, patch)
2017-02-15 11:07 UTC, Philip Withnall
accepted-commit_now Details | Review
docs: Add (skip) annotation to some non-introspectable deprecated funcs (2.25 KB, patch)
2017-02-15 11:07 UTC, Philip Withnall
accepted-commit_now Details | Review
docs: Fix some introspection annotation syntax (2.46 KB, patch)
2017-02-15 11:07 UTC, Philip Withnall
accepted-commit_now Details | Review

Description Philip Withnall 2017-02-15 11:07:14 UTC
These are not comprehensive, but do fix some low-hanging fruit from the g-ir-scanner warnings.
Comment 1 Philip Withnall 2017-02-15 11:07:18 UTC
Created attachment 345800 [details] [review]
docs: Add a few missing (transfer) annotations

This should fix a few scanner warnings, but this is not an attempt to
fix them all.

Signed-off-by: Philip Withnall <withnall@endlessm.com>
Comment 2 Philip Withnall 2017-02-15 11:07:24 UTC
Created attachment 345801 [details] [review]
docs: Add (skip) annotation to some non-introspectable deprecated funcs

To make it a bit more explicit that there’s no need to worry about
introspecting them.

Signed-off-by: Philip Withnall <withnall@endlessm.com>
Comment 3 Philip Withnall 2017-02-15 11:07:30 UTC
Created attachment 345802 [details] [review]
docs: Fix some introspection annotation syntax

Signed-off-by: Philip Withnall <withnall@endlessm.com>
Comment 4 Matthias Clasen 2017-04-08 04:15:58 UTC
Review of attachment 345800 [details] [review]:

ok
Comment 5 Matthias Clasen 2017-04-08 04:16:07 UTC
Review of attachment 345800 [details] [review]:

ok
Comment 6 Matthias Clasen 2017-04-08 04:16:28 UTC
Review of attachment 345801 [details] [review]:

sure
Comment 7 Matthias Clasen 2017-04-08 04:17:13 UTC
Review of attachment 345802 [details] [review]:

ok