docs: Add a few missing (transfer) annotations

This should fix a few scanner warnings, but this is not an attempt to
fix them all.

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://bugzilla.gnome.org/show_bug.cgi?id=778663